# iotables

./: .gitignore  .gitmodules  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: iotable_integration.ipynb  presentation.ipynb  spa_dev.ipynb  wiedmann_product_decomposition.ipynb
pyspa/: A_matrix_template.csv  Infosheet_template.csv  README.md  Thresholds_template.csv  Thresholds_template_perc.csv  pyspa.html  pyspa.py
scripts/: IOanalysis.py  SPAv1.py  SU_to_IOT.py  SingleSUImportsAsPI.py
