[tool.poetry]
# we are not planning on publishing or distributing the contents of this repo
# so poetry's role here is purely for package management
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "^5.22.0"
tqdm = "^4.66.4"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pymatreader = "^0.0.32"
h5py = "^3.11.0"
pytest = "^8.2.2"
openpyxl = "^3.1.4"
xarray = "^2024.6.0"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["E4", "E7", "E9", "F", "C901","I","N8","D1","D419","ANN0","ANN2","S110","S112","PL"]


[tool.pytest.ini_options]
pythonpath = [
  "."
]


[tool.pylint.main]
fail-under = 8.4
[tool.pylint.'MESSAGES CONTROL']
max-line-length = 160 
disable = ['trailing-whitespace','trailing-newlines','import-error','missing-final-newline']
ignore = '*/legacy/*'
